correct transform to work on iOS 2.0

--- a/styles/style.css
+++ b/styles/style.css
@@ -67,19 +67,20 @@ main {
   justify-content: center;
   position: absolute;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   transform-style: preserve-3d;
 }
 
 .back-face {
   transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
+  /* -webkit-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg); */
 }
 
 .flip {
     transform: rotateY(180deg);
-    -webkit-transform: rotateY(180deg);
-    -ms-transform: rotateY(180deg);
+    /* -webkit-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg); */
 }
 
 @media (max-width: 600px){
